--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="container mt-5">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="#"><img src="images/banner-images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -25,7 +25,7 @@
               </div>
             </div>
           </nav>
-          <div id="carouselExampleSlidesOnly" class="carousel slide panda-slide" data-bs-ride="carousel">
+          <div id="carouselExampleSlidesOnly" class="carousel slide panda-slide mt-5" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                   <div class="row d-flex align-items-center p-5">
@@ -77,19 +77,19 @@
               <div class="col">
                <div class="p-3 rounded bg-secondary d-flex justify-content-around align-items-center">
                    <h1 class="text-white">Watch</h1>
-                   <img src="images/categories/watch.png" alt="">
+                   <img class="size" src="images/categories/watch.png" alt="">
                </div>
               </div>
               <div class="col">
                 <div class="p-3 rounded bg-info d-flex justify-content-around align-items-center">
                     <h1 class="text-white">Bag</h1>
-                    <img src="images/categories/bag.png" alt="">
+                    <img class="size" src="images/categories/bag.png" alt="">
                 </div>
               </div>
               <div class="col">
                 <div class="p-3 rounded bg-warning d-flex justify-content-around align-items-center">
                     <h1 class="text-white">Shoe</h1>
-                    <img src="images/categories/shoes.png" alt="">
+                    <img class="size" src="images/categories/shoes.png" alt="">
                     </div>
               </div>
             </div>
@@ -100,7 +100,7 @@
               <h3>shoes</h3>
               <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                  <div class="card h-100 shadow">
+                  <div class="card h-100 panda-card shadow">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 360</h5>
@@ -108,31 +108,31 @@
                         This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longe</p>
 
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer panda-card-footer">
                       <button class="btn btn-warning">Buy Now</button>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100 shadow">
+                  <div class="card h-100 panda-card shadow">
                     <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Nike 420</h5>
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer panda-card-footer">
                         <button class="btn btn-warning">Buy Now</button>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100 shadow">
+                  <div class="card h-100 panda-card shadow">
                     <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Red Airmax</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer panda-card-footer">
                         <button class="btn btn-warning">Buy Now</button>
                     </div>
                   </div>
@@ -147,7 +147,7 @@
             <h3>Backpack</h3>
             <div class="row row-cols-1 row-cols-md-3 g-4">
               <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 panda-card shadow">
                   <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Red Laltu Bag</h5>
@@ -156,33 +156,33 @@
                       This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longe</p>
 
                   </div>
-                  <div class="card-footer">
+                  <div class="card-footer panda-card-footer">
                     <button class="btn btn-warning">Buy Now</button>
                   </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 panda-card shadow">
                   <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Blue Niltu Bag</h5>
                     <h5>$130</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   </div>
-                  <div class="card-footer">
+                  <div class="card-footer panda-card-footer">
                       <button class="btn btn-warning">Buy Now</button>
                   </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 panda-card shadow">
                   <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Red Airmax</h5>
                     <h5>$140</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                   </div>
-                  <div class="card-footer">
+                  <div class="card-footer panda-card-footer">
                       <button class="btn btn-warning">Buy Now</button>
                   </div>
                 </div>
@@ -191,10 +191,10 @@
 
           </section>
 
-          <section style="height: 300px;"class="bg-info mt-5 d-flex justify-content-center justi align-items-center">
+          <section style="height: 300px;" class="bg-info mt-5 d-flex justify-content-center align-items-center">
             <div>
              <h1>LET'S STAY IN TOUCH</h1>
-             <h5>Get updates on sales, specials and more</h5>
+             <h6>Get updates on sales, specials and more</h6>
              <input type="text" placeholder="Enter your email">
              <button class="btn-warning">SUBMIT</button>
             </div>
